--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,20 +1,77 @@
 ---
 layout: default
 ---
-{% for post in site.posts %}
-<div class="row">
-    <div class="col s12 m6">
-      <div class="card">
-        <div class="card-content">
-          <span class="card-title">{{ post.title }}</span>
-          <p>{{ post.excerpt }}</p>
+<div class="divider"></div>
+
+<div class="section">
+    <h5>Section 1</h5>
+    <div class="row">
+        <div class="col s4">
+            <div class="center promo promo-example">
+            <i class="material-icons">flash_on</i>
+            <p class="promo-caption">Speeds up development</p>
+            <p class="light center">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components.</p>
+            </div>
         </div>
-        <div class="card-action">
-          <a href="{{ post.url | prepend: site.baseurl }}">
-            Read More
-          </a>
+        <div class="col s4">
+            <div class="center promo promo-example">
+            <i class="material-icons">group</i>
+            <p class="promo-caption">User Experience Focused</p>
+            <p class="light center">By utilizing elements and principles of Material Design, we were able to create a framework that focuses on User Experience.</p>
+            </div>
         </div>
-      </div>
+        <div class="col s4">
+            <div class="center promo promo-example">
+            <i class="material-icons">settings</i>
+            <p class="promo-caption">Easy to work with</p>
+            <p class="light center">We have provided detailed documentation as well as specific code examples to help new users get started.</p>
+            </div>
+        </div>
     </div>
 </div>
-{% endfor %}
+
+<div class="divider"></div>
+
+<section>
+    <h5>Section 1</h5>
+    <div class="row">
+    {% for item in site.portfolio%}
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-content">
+              <span class="card-title">{{ item.title }}</span>
+              <p>{{ item.description }}</p>
+            </div>
+            <div class="card-action">
+              <a href="{{ item.url | prepend: item.baseurl }}">
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+    {% endfor %}
+    </div>
+</section>
+
+<div class="divider"></div>
+
+<section>
+    <h5>Section 1</h5>
+    <div class="row">
+    {% for post in site.posts%}
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-content">
+              <span class="card-title">{{ post.title }}</span>
+              <p>{{ post.excerpt }}</p>
+            </div>
+            <div class="card-action">
+              <a href="{{ post.url | prepend: site.baseurl }}">
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+    {% endfor %}
+    </div>
+</section>
